Fix CI login screen miss on Compose emulator.
Wait for idle is disabled for UiAutomator2, CI preflights the a11y tree, and failures dump page source so the next flake is diagnosable.